# 01_task_event_provider

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  run.sh
.github/workflows/: deploy.yml  lint.yaml
src/app/: __init__.py  config.py  main.py
src/app/api/: routes.py  schemas.py
src/app/infrastructure/: capashino_client.py  database.py  events_provider_client.py  models.py
src/app/infrastructure/repositories/: event_repository.py  idempotency_repository.py  outbox_repository.py  sync_repository.py  ticket_repository.py
src/app/services/: outbox_worker.py  seats_cache.py  sync_service.py
